Ignores other irrelevant stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-/.project
+*.pyc
+*.egg-info
+*.egg
+*build/
+.tox
+.coverage
+*.DS_Store
+*.sass-cache
+.ruby-version
+dist/
+bower_components/
+node_modules/
+npm-debug.log
