--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install -q -r requirements.txt --use-mirrors"
+install: "pip install -q -r requirements.txt"
 # command to run tests
 script: sphinx-build -W -b html -d build/doctrees . build/html
 # Flags used here, not in `make html`:
