--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 # command to install dependencies
 install: "pip install -q -r requirements.txt"
 # command to run tests
-script: sphinx-build -W -b html -d build/doctrees . build/html
+script: sphinx-build -nW -b html -d build/doctrees . build/html
 # Flags used here, not in `make html`:
 #  -n   Run in nit-picky mode. Currently, this generates warnings for all missing references.
 #  -W   Turn warnings into errors. This means that the build stops at the first warning and sphinx-build exits with exit status 1.
